lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx7800xt-2.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1219,
    "max_sclk": 2560,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1219,
            "min": 97
          },
          "current_sclk_range": {
            "max": 2560,
            "min": 500
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": {
              "max": 5000,
              "min": 500
            },
            "sclk_offset": null,
            "voltage_offset": {
              "max": 0,
              "min": -450
            }
          },
          "sclk_offset": null,
          "vddc_curve": [],
          "voltage_offset": 0
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "link_info": {
      "current_speed": "16.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 32 [Radeon RX 7700 XT / 7800 XT]",
        "model_id": "747E",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model_id": "475D",
        "vendor": "Sapphire Technology Limited",
        "vendor_id": "1DA2"
      }
    },
    "vbios_version": "113-D7120201-S01",
    "vulkan_info": {
      "api_version": "",
      "device_name": "",
      "driver": {
        "version": 0
      },
      "enabled_layers": [],
      "extensions": {},
      "features": {}
    }
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 32 [Radeon RX 7700 XT / 7800 XT]",
      "model_id": "747E",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model_id": "475D",
      "vendor": "Sapphire Technology Limited",
      "vendor_id": "1DA2"
    }
  },
  "power_profile_modes": {
    "active": 1,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              3276800,
              -65536,
              -6553
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              5242880,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              3407872,
              -65536,
              -6553
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              3473408,
              -65536,
              -6553
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3276800,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3932160,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              0,
              655360,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "CUSTOM"
      },
      "7": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              5242880,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "WINDOW_3D"
      }
    },
    "value_names": [
      "FPS",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "index": 0,
        "value": 500
      },
      {
        "enabled": true,
        "index": 1,
        "value": 0
      },
      {
        "enabled": true,
        "index": 2,
        "value": 2124
      }
    ],
    "vram": [
      {
        "enabled": true,
        "index": 0,
        "value": 96
      },
      {
        "enabled": true,
        "index": 1,
        "value": 456
      },
      {
        "enabled": true,
        "index": 2,
        "value": 772
      },
      {
        "enabled": true,
        "index": 3,
        "value": 1218
      }
    ]
  },
  "stats": {
    "busy_percent": 0,
    "clockspeed": {
      "gpu_clockspeed": 0,
      "vram_clockspeed": 772
    },
    "core_power_state": 1,
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            3600
          ],
          "current": 3600
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            3600
          ],
          "current": 1250
        },
        "minimum_pwm": {
          "allowed_range": [
            15,
            100
          ],
          "current": 15
        },
        "target_temp": {
          "allowed_range": [
            25,
            110
          ],
          "current": 82
        },
        "zero_rpm_enable": false,
        "zero_rpm_temperature": {
          "allowed_range": [
            25,
            100
          ],
          "current": 55
        }
      },
      "pwm_current": 76,
      "pwm_max": 254,
      "pwm_min": 38,
      "speed_current": 1317,
      "speed_max": 3600,
      "speed_min": 0,
      "temperature_range": [
        25,
        100
      ]
    },
    "memory_power_state": 2,
    "pcie_power_state": 2,
    "performance_level": "auto",
    "power": {
      "average": 31.0,
      "cap_current": 212.0,
      "cap_default": 212.0,
      "cap_max": 280.0,
      "cap_min": 190.0
    },
    "temps": {
      "edge": {
        "crit": 100.0,
        "crit_hyst": -273.1499938964844,
        "current": 25.0
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 34.0
      },
      "mem": {
        "crit": 108.0,
        "crit_hyst": -273.1499938964844,
        "current": 46.0
      }
    },
    "voltage": {
      "gpu": 80
    },
    "vram": {}
  }
}
