lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx7800xt.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1300,
    "max_sclk": 2660,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1300,
            "min": 97
          },
          "current_sclk_range": {
            "max": 2660,
            "min": 500
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": {
              "max": 5000,
              "min": 500
            },
            "sclk_offset": null,
            "voltage_offset": {
              "max": 0,
              "min": -450
            }
          },
          "sclk_offset": null,
          "vddc_curve": [],
          "voltage_offset": -100
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "16.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 32 [Radeon RX 7700 XT / 7800 XT]",
        "model_id": "747E",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "PowerColor RX 7800 XT Hellhound",
        "model_id": "2427",
        "vendor": "Tul Corporation / PowerColor",
        "vendor_id": "148C"
      }
    },
    "vbios_version": "113-EXT90249-100",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 32 [Radeon RX 7700 XT / 7800 XT]",
      "model_id": "747E",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "PowerColor RX 7800 XT Hellhound",
      "model_id": "2427",
      "vendor": "Tul Corporation / PowerColor",
      "vendor_id": "148C"
    }
  },
  "power_profile_modes": {
    "active": 5,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              3276800,
              -65536,
              -6553
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              5242880,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              3407872,
              -65536,
              -6553
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              3473408,
              -65536,
              -6553
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3276800,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3932160,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              0,
              655360,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "CUSTOM"
      },
      "7": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              5242880,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "WINDOW_3D"
      }
    },
    "value_names": [
      "FPS",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 500
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 77
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 2254
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 96
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 456
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 772
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 1218
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 1
      },
      "memory": {
        "Index": 1
      },
      "pcie": {
        "Index": 2
      }
    },
    "busy_percent": 2,
    "clockspeed": {
      "gpu_clockspeed": 2011,
      "sensors": {
        "DCLK": 25,
        "DCLK1": 25,
        "SOCCLK": 750,
        "UCLK": 456,
        "VCLK": 25,
        "VCLK1": 25
      },
      "target_gpu_clockspeed": 2011,
      "vram_clockspeed": 456
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            3300
          ],
          "current": 3000
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            3300
          ],
          "current": 1200
        },
        "minimum_pwm": {
          "allowed_range": [
            35,
            100
          ],
          "current": 35
        },
        "target_temp": {
          "allowed_range": [
            25,
            110
          ],
          "current": 81
        },
        "zero_rpm_enable": true,
        "zero_rpm_temperature": {
          "allowed_range": [
            25,
            100
          ],
          "current": 50
        }
      },
      "pwm_current": 89,
      "pwm_max": 254,
      "pwm_min": 89,
      "speed_current": 868,
      "speed_max": 3300,
      "speed_min": 0,
      "temperature_range": [
        25,
        100
      ]
    },
    "performance_level": "manual",
    "power": {
      "average": 32.0,
      "cap_current": 236.0,
      "cap_default": 236.0,
      "cap_max": 280.0,
      "cap_min": 212.0
    },
    "temps": {
      "edge": {
        "crit": 100.0,
        "crit_hyst": -273.1499938964844,
        "current": 24.0,
        "display_only": false,
        "primary": true
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 31.0,
        "display_only": false,
        "primary": true
      },
      "mem": {
        "crit": 108.0,
        "crit_hyst": -273.1499938964844,
        "current": 48.0,
        "display_only": false,
        "primary": true
      },
      "vrgfx": {
        "crit": null,
        "crit_hyst": null,
        "current": 34.0,
        "display_only": true,
        "primary": false
      },
      "vrmem": {
        "crit": null,
        "crit_hyst": null,
        "current": 34.0,
        "display_only": true,
        "primary": false
      },
      "vrsoc": {
        "crit": null,
        "crit_hyst": null,
        "current": 32.0,
        "display_only": true,
        "primary": false
      }
    },
    "throttle_info": {},
    "voltage": {
      "gpu": 985,
      "sensors": {
        "mem": 704,
        "soc": 768
      }
    },
    "vram": {}
  }
}
