lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx7900xt.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1250,
    "max_sclk": 2735,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1250,
            "min": 97
          },
          "current_sclk_range": {
            "max": 2735,
            "min": 500
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": {
              "max": 5000,
              "min": 500
            },
            "voltage_offset": {
              "max": 0,
              "min": -450
            }
          },
          "vddc_curve": [],
          "voltage_offset": 0
        },
        "kind": "vega20"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "link_info": {
      "current_speed": "16.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 31 [Radeon RX 7900 XT/7900 XTX/7900 GRE/7900M]",
        "model_id": "744C",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "NITRO+ RX 7900 XTX Vapor-X",
        "model_id": "E471",
        "vendor": "Sapphire Technology Limited",
        "vendor_id": "1DA2"
      }
    },
    "vbios_version": "113-D70401XT-N11"
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 31 [Radeon RX 7900 XT/7900 XTX/7900 GRE/7900M]",
      "model_id": "744C",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "NITRO+ RX 7900 XTX Vapor-X",
      "model_id": "E471",
      "vendor": "Sapphire Technology Limited",
      "vendor_id": "1DA2"
    }
  },
  "stats": {
    "busy_percent": 3,
    "clockspeed": {},
    "core_power_state": 1,
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            3200
          ],
          "current": 3200
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            3200
          ],
          "current": 1450
        },
        "minimum_pwm": {
          "allowed_range": [
            15,
            100
          ],
          "current": 15
        },
        "target_temp": {
          "allowed_range": [
            25,
            105
          ],
          "current": 83
        }
      }
    },
    "memory_power_state": 3,
    "power": {},
    "temps": {},
    "voltage": {},
    "vram": {}
  }
}
